# minor_ros

./: .gitignore  .gitmodules  README.md  club_inside.pgm  club_inside.yaml  dean12.pgm  dean12.yaml  inside.data  inside.pgm  inside.yaml  khatramap.data  khatramap.yaml  map1.pgm  map1.yaml  map_1710012936.yaml  map_1710013057.yaml  map_1710013253.pgm  map_1710013253.yaml  map_1710013320.yaml  map_1710089057.pgm  map_1710089057.yaml  map_1710089273.yaml  map_1710089350.yaml  map_1710089374.pgm  map_1710089374.yaml  my_map_save.pgm  my_map_save.yaml  newmap.data  newmap.pgm  newmap.yaml  newmap1.data  newmap1.pgm  newmap1.yaml  redcar.data  redcar.pgm  redcar.yaml  requirements.txt
car/: .gitignore  .mxproject  Makefile  README.md  car.ioc
car/Inc/: ackermann_kinematics.hpp  main.h  rear_motor.hpp  robot.h  stm32f4xx_it.h  tim.h
car/Libraries/robotlib/: README.md
car/Libraries/robotlib/actuators/: motor.cpp  motor.hpp  servo.cpp  servo.hpp
car/Libraries/robotlib/communication/: uart.cpp  uart.h  xbee.cpp  xbee.hpp
car/Libraries/robotlib/controllers/: fuzzy_pid.cpp  fuzzy_pid.hpp  pid.cpp  pid.hpp
car/Libraries/robotlib/crypto/: crc.cpp
car/Libraries/robotlib/filters/: complementary.hpp  exponential.hpp  ramp.hpp
car/Libraries/robotlib/joystick/: joystick.cpp  joystick.hpp
car/Libraries/robotlib/kinematics/: omniwheel.hpp
car/Libraries/robotlib/maths/: math.hpp
car/Libraries/robotlib/sensors/: encoder.cpp  encoder.hpp  nano_mpu.cpp  nano_mpu.h  tfmini.cpp  tfmini.hpp
car/Src/: crc8.py  dma.c  gpio.c  main.c  rear_motor.cpp  robot.cpp  serial1.py  stm32f4xx_hal_msp.c  stm32f4xx_it.c  tim.c  usart.c
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/car_body/share/car_body/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/car_urdf/lib/car_urdf/: talker
install/car_urdf/share/car_urdf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/pubsub/lib/pubsub/: draw_circle  listener  motor_vel  talker  test_node  turtle_controller
install/pubsub/share/pubsub/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/ackermann_drive_controller/: ackermann_drive_plugin.xml
src/ackermann_drive_controller/src/: ackermann_drive_controller.cpp
src/car_body/: CMakeLists.txt  package.xml
src/car_body/description/: car.urdf.xacro  car.xacro  color.urdf.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  vehicle.urdf.xacro
src/car_body/launch/: car.launch.py  car_sim.launch.py  rplidar.launch.py  sdccar.launch.py
src/car_body/worlds/: view_car.rviz
src/car_gazebo/: CMakeLists.txt  car_gazebo.xml  package.xml
src/car_gazebo/config/: ackermann_controller.yaml  carlikebot_controllers.yaml  ekf_param.yaml  joystick.yaml  mapper_params_online_async.yaml  nav2_amcl.yaml  nav2_params.yaml  nav2_params2.yaml  nav2_test_params.yaml  twist_mux.yaml
src/car_gazebo/cv/: yolov8_ros2_pt.py  yolov8_ros2_subscriber.py
src/car_gazebo/hardware/: carlikebot_system.cpp  crc8.cpp
src/car_gazebo/hardware/include/car_gazebo/: carlikebot_system.hpp  crc8.hpp  visibility_control.h
src/car_gazebo/launch/: bringup_car.launch.py  car_gazebo.launch.py  ekf.launch.py  joystick.launch.py  localization_launch.py  navigation_launch.py  online_async_launch.py  pose.launch.py  transform.launch.py  view_car.launch.py
src/car_gazebo/rosbridge/: car_teleop.py  pose_receiver.py
src/car_gazebo/rviz/: def.rviz  normal_enviroment.rviz
src/car_gazebo/src/: car_control.py  client.py  crc8.py  imu_mobile_server.py  pose_receiver.py  quat_to_euler.py  serial_comms.py  static_teleop.py  teleop.py
src/car_gazebo/transforms/: base_link_to_imu_frame.py  base_link_to_laser_frame.py  fake_encoder_odom_topic.py  map_to_base_link.py  odom_to_base_link.py
src/car_gazebo/urdf/: camera.urdf.xacro  car.urdf.xacro  car_lidar.xacro  car_ros2_control.xacro  imu.urdf.xacro  inertial_macros.xacro  lidar.urdf.xacro  my_car.xacro  vehicle.urdf.xacro
src/car_gazebo/worlds/: empty.world
src/pubsub/: setup.cfg  setup.py
src/pubsub/pubsub/: car_control.py  my_vel_subscriber.py  pose_receiver.py
src/yolo_msgs/: CMakeLists.txt  package.xml
src/yolo_msgs/msg/: Yolov8Inference.msg
(+7 files in other folders)
